# Nexus---Code-Forensics-AI-Plagiarism-Engine.-

./: .env.example  .gitignore  Buildplan.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tatus
apps/api-gateway/: Dockerfile  package.json
apps/api-gateway/src/: index.ts
apps/api-gateway/src/graphql/: context.ts  schema.ts
apps/api-gateway/src/graphql/resolvers/: index.ts  root.ts
apps/api-gateway/src/kafka/: producer.ts
apps/api-gateway/src/redis/: client.ts  job-state.ts  pubsub.ts  subscriber.ts
apps/api-gateway/src/storage/: minio.client.ts  upload.handler.ts
apps/web/: package.json  tsconfig.json
apps/web/app/: page.tsx
infra/: validate.sh
infra/kafka/: console-config.yaml  init-topics.sh
infra/minio/: init-buckets.sh  test_minio_connection.py
infra/redis/: redis.conf
services/ai-worker/: Dockerfile  deduplicator.py  forensic_analyst.py  kafka_client.py  main.py  pyproject.toml  report_store.py  requirements.txt
services/ai-worker/tests/: __init__.py
services/ai-worker/tests/integration/: __init__.py
services/ai-worker/tests/unit/: __init__.py  test_deduplicator.py  test_report_store.py
services/api-gateway/: package.json  tsconfig.json
services/api-gateway/src/: index.ts
services/hash-worker/: Dockerfile  README.md  ast_engine.py  benchmark.py  comparator.py  conftest.py  handler.py  kafka_client.py  lsh_index.py  main.py  minio_client.py  pipeline.py  pyproject.toml  requirements.txt  state.py  test_algo.py  test_phase1.py  test_phase2.py  test_phase3.py  winnowing.py
services/hash-worker/scripts/: create_edge_case_zip.py  create_integration_fixtures.py
services/hash-worker/tests/: conftest.py
shared/: schemas.py
shared/types/: index.ts  package.json
