[project]
name = "nexus-ai-worker"
version = "0.1.0"
description = "LLM-powered forensic analysis worker for suspicious code pairs"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0.2",
    "minio>=7.2.0",
    "redis>=5.0.0",
    "openai>=1.12.0",
    "networkx>=3.2.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
