[project]
name = "nexus-ai-worker"
version = "0.1.0"
description = "Nexus AI worker: LLM-powered forensic analysis of suspicious code pairs"
requires-python = ">=3.11"

dependencies = [
    # Kafka consumer (confluent-kafka — C extension, fastest Python Kafka client)
    "confluent-kafka==2.4.0",

    # MinIO S3-compatible client
    "minio==7.2.7",

    # Redis client (sync for state writes + pub/sub publish)
    "redis==5.0.4",

    # Async HTTP for LLM API calls (primary workload of this worker)
    "httpx==0.27.0",

    # Graph algorithms for transitive closure deduplication
    # Used in deduplicator.py to find connected components (cheating rings)
    "networkx==3.3",

    # Environment variable loading (.env support for local dev)
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "mypy==1.9.0",
    "ruff==0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
