[project]
name = "nexus-hash-worker"
version = "0.1.0"
description = "Nexus hash worker: C++ AST parsing, Winnowing fingerprinting, pairwise similarity"
requires-python = ">=3.11"

dependencies = [
    # Kafka consumer (C extension — faster than kafkajs, critical for throughput)
    "confluent-kafka==2.4.0",

    # Tree-sitter C++ parsing
    "tree-sitter==0.22.0",
    "tree-sitter-cpp==0.22.0",

    # MinIO S3-compatible client
    "minio==7.2.7",

    # Redis client (sync for state updates)
    "redis==5.0.4",

    # MinHash + LSH pre-filter (reduces O(N²) to O(N log N))
    "datasketch==1.6.5",

    # Environment variable loading
    "python-dotenv==1.0.1",

    # Async HTTP (shared dep with ai-worker)
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "mypy==1.9.0",
    "ruff==0.4.0",
]

[tool.pytest.ini_options]
testpaths = [".", "tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
